syntax = "proto3";

package coolstore.catalog.v1;

option csharp_namespace = "CoolStore.Protobuf.Catalogs.V1";

import "google/protobuf/empty.proto";
import "google/protobuf/wrappers.proto";

message CatalogProductDto {
  google.protobuf.StringValue id = 1;
  google.protobuf.StringValue name = 2;
  string description = 3;
  google.protobuf.DoubleValue price = 4;
  google.protobuf.StringValue image_url = 5;
  google.protobuf.StringValue inventory_id = 6;
  google.protobuf.StringValue inventory_location = 7;
  google.protobuf.StringValue inventory_website = 8;
  string inventory_description = 9;
  google.protobuf.StringValue category_id = 10;
  google.protobuf.StringValue category_name = 11;
}

message ProductUpdated {
  google.protobuf.StringValue product_id = 1;
  google.protobuf.StringValue name = 2;
  string description = 3;
  google.protobuf.DoubleValue price = 4;
  google.protobuf.StringValue image_url = 5;
}

message ProductDeleted  {
  google.protobuf.StringValue product_id = 1;
}